--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,12 @@ body {
   text-shadow: 4px 1px 2px #000000;
 }
 
+a {
+  display: flex;
+}
+
 /* background colour */
-.portfolio {
+.body {
   color: white;
   background: radial-gradient(
     540px at 50% 50%,
@@ -24,110 +28,90 @@ body {
   );
 }
 /* This is the nav bar */
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 10vh;
-  width: 90%;
-  margin: auto;
-  padding: 20px 0px;
-}
-a {
-  text-decoration: none !important;
-  color: white;
-  display: flex;
-}
-/*The logo on the top right */
-.logo {
-  display: flex;
-}
-.logo a {
-  font-weight: 300;
-  color: #ffffff;
-  text-decoration: none;
-  letter-spacing: 3px;
-  font-size: 22px;
-  letter-spacing: 5px;
-  margin-top: 8px;
-  margin-left: 8px;
-}
-.logo a:hover {
-  color: #f70060;
-}
-/* thise are the links in the nav bar */
-.nav-links {
-  display: flex;
-  justify-content: space-between;
-  text-transform: uppercase;
-  width: 35%;
-}
-.nav-links li {
-  list-style: none;
-}
-/* thise are all the links in the nav bar */
-.nav-links a {
-  color: #ffffff;
-  text-decoration: none;
-  letter-spacing: 3px;
-  font-size: 18px;
-  font-weight: 300;
-}
-.nav-links a:hover,
-a:active {
-  color: #f70060;
-}
-.burger {
-  display: none;
-  cursor: pointer;
-}
-.burger div {
-  width: 25px;
-  height: 3px;
-  background-color: #ffffff;
-  margin: 5px;
-  transition: all 0.3s ease;
-}
-
-.dropdown {
-  float: inline-end;
+.topnav {
   overflow: hidden;
-  color: #f70060;
-}
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #000;
-  min-width: 180px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: #f70060;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-}
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
+.topnav a {
+  float: left;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 300;
+}
+
+.topnav a:hover {
+  border-bottom: solid #f70060;
+}
+
+.topnav a.active {
+  background-color: #f70060;
+  color: #ffffff;
+}
+
+.topnav .icon {
+  display: none;
+}
+/* thise are the pages*/
 .page {
-  min-height: 90vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 5% 1fr 1fr 1fr 5%;
+}
+.page-cubeit {
+  height: 100vh;
+}
+.page-gallery {
+  height: 100vh;
+}
+.page-cubeit h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 30px;
+}
+.page-cubeit h2 {
+  margin-top: 40px;
+  font-weight: 300;
+  font-size: 34px;
+  text-align: center;
+}
+.page-cubeit p {
+  font-weight: 100;
+  font-size: 26px;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page-gallery h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 30px;
+}
+.page-gallery h2 {
+  margin-top: 40px;
+  font-weight: 300;
+  font-size: 34px;
+  text-align: center;
+}
+.page-gallery p {
+  font-weight: 100;
+  font-size: 26px;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 15px;
+}
+.page-gallery img {
+  margin-bottom: 10px;
+  border: solid 5px #ffffff;
 }
 /*Image grid*/
 .hero {
@@ -173,48 +157,170 @@ a:active {
   font-size: 24px;
   font-weight: 100;
   padding: 20px 0px 50px 0px;
+  margin-bottom: 45px;
 }
-.pages {
-  position: absolute;
-  right: 5%;
-  top: 50%;
-  transform: translateY(-50%);
+/* the button */
+#download a:link,
+a:visited {
+  background-color: #000;
+  color: #ffffff;
+  padding: 14px 25px;
 }
-.pages h3 {
-  font-size: 24px;
-  font-weight: 100;
+.button {
+  overflow: hidden;
+  align-self: center;
+  justify-self: center;
+  display: flex;
+  width: 250px;
 }
-.pages svg {
-  margin: 12px;
-  cursor: pointer;
-  width: 12px;
-  height: 12px;
-  opacity: 0.5;
-  transform: scale(2);
+#download a:hover,
+a:active {
+  color: #000;
+  background-color: #ffffff;
 }
-.pages svg:hover {
-  animation: dot 0.5s ease-in-out infinite alternate;
+#download a {
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
 }
 
-.pages svg.active {
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #f70060;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: #f70060;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: #f70060;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f70060;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+img {
+  margin-bottom: -4px;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: #f70060;
+}
+
+.caption-container p {
+  font-weight: 300;
+}
+
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
   opacity: 1;
 }
 
-@keyframes dot {
-  0% {
-    transform: scale(2);
-  }
-  100% {
-    transform: scale(4);
-  }
+img.hover-shadow {
+  transition: 0.3s;
 }
-.pages > div {
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 /* Responsive for tablets */
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .page {
     grid-template-columns: 5% 1fr 5%;
     grid-template-rows: 2fr 1fr;
@@ -241,14 +347,24 @@ a:active {
   .nav-links {
     width: 65%;
   }
-}
-/* Responsive for phones */
-@media (max-width: 768px) {
-  body {
-    overflow-x: hidden;
+  .button {
+    margin-left: 110px;
   }
+  .column {
+    width: 1020px;
+  }
+}
+
+/* Responsive for phones */
+@media screen and (max-width: 768px) {
   .page {
     grid-template-rows: 1fr 1fr;
+  }
+  .page-cubeit {
+    height: 250vh;
+  }
+  .page-gallery {
+    height: 200vh;
   }
   .hero img {
     height: 390px;
@@ -260,23 +376,80 @@ a:active {
     font-size: 28px;
   }
   .nav-links {
-    position: absolute;
-    right: 0px;
-    height: 85vh;
-    padding: 50px;
-    top: 15vh;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    transform: translateX(100%);
-    transition: transform 0.7s ease-in;
+    display: none;
   }
-  .nav-links li {
-    opacity: 0;
+  .logo a {
+    display: none;
   }
   .burger {
+    display: flex;
+  }
+  .button {
+    margin-left: 70px;
+  }
+  .column h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    margin-left: 35px;
+  }
+  .column p {
+    font-size: 18px;
+    margin-bottom: 25px;
+    margin-left: 35px;
+  }
+  .column {
     display: block;
+    width: 340px;
+    float: left;
+  }
+  .column img {
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 667px) {
+  .page-cubeit {
+    height: 310vh;
+  }
+  .column {
+    display: block;
+    width: 940px;
+    float: left;
+  }
+}
+@media (max-width: 568px) {
+  .page-cubeit {
+    height: 390vh;
+  }
+  .column {
+    display: block;
+    width: 290px;
+    float: left;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
