--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,9 +317,10 @@ img.hover-shadow {
 .hover-shadow:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-@media screen and (max-width: 1129px) {
+@media screen and (max-width: 1200px) {
   .hero img {
     height: 300px;
+    margin-left: 150px;
   }
 }
 /* Responsive for tablets */
