--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,525 +1,139 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  text-shadow: 4px 1px 2px #000000;
+	font-family: 'Futura PT', sans-serif;
+	text-transform: uppercase;
 }
 
 a {
-  display: flex;
+	display: flex;
 }
 
-/* background colour */
+/* background && text colour */
 .body {
-  color: white;
-  background: radial-gradient(
-    540px at 50% 50%,
-    #213577 0%,
-    #14245a 0.01%,
-    #070a2a 100%
-  );
+	color: #ffffff;
+	background: #55efc4;
 }
 /* This is the nav bar */
 .topnav {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  color: #ffffff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  font-weight: 300;
+	float: left;
+	display: block;
+	color: #ffffff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 18px;
+	font-weight: 500;
 }
 
 .topnav a:hover {
-  border-bottom: solid #f70060;
+	border-bottom: solid #ffffff;
 }
 
 .topnav a.active {
-  background-color: #f70060;
-  color: #ffffff;
+	background-color: #000000;
+	color: #ffffff;
 }
 
 .topnav .icon {
-  display: none;
+	display: none;
 }
 /* thsese are the pages*/
 .page {
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 5% 1fr 1fr 1fr 5%;
+	min-height: 100vh;
+	display: grid;
+	grid-template-columns: 5% 1fr 1fr 1fr 5%;
 }
-.page-cubeit {
-  height: 80vh;
-}
-.page-gallery {
-  height: 100vh;
-}
-.page-cubeit h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 30px;
-}
-.page-cubeit h2 {
-  margin-top: 40px;
-  font-weight: 300;
-  font-size: 34px;
-  text-align: center;
-}
-.page-cubeit p {
-  font-weight: 100;
-  font-size: 26px;
-  text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
+.page-horizon {
+	height: 100vh;
 }
 
-.page-gallery h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 30px;
-}
-.page-gallery h2 {
-  margin-top: 40px;
-  font-weight: 300;
-  font-size: 34px;
-  text-align: center;
-}
-.page-gallery p {
-  font-weight: 100;
-  font-size: 26px;
-  text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 15px;
-}
-.page-gallery img {
-  margin-bottom: 10px;
-  border: solid 5px #ffffff;
-}
 /*Image grid*/
-.hero {
-  overflow: hidden;
-  height: 500px;
-  align-self: center;
-  justify-self: center;
-  display: flex;
+.image-container {
+	margin-bottom: 100px;
+	grid-column: 4/4;
+	align-self: end;
+}
+.button-container {
+	overflow: hidden;
+	height: 500px;
+	align-self: center;
+	justify-self: center;
+	display: flex;
 }
 .team {
-  overflow: hidden;
-  height: 500px;
-  align-self: center;
-  justify-self: center;
-  display: flex;
+	overflow: hidden;
+	height: 500px;
+	align-self: center;
+	justify-self: center;
+	display: flex;
 }
 /*The inside images*/
-.hero img {
-  height: 500px;
-  transition: transform 0.3s ease-out;
-  cursor: pointer;
-}
-.mainImg-right {
-  transform: translate(0%, 10%);
-}
-.mainImg-left {
-  transform: translate(0%, -10%);
-}
-.hero:hover .mainImg-right {
-  transform: translate(0%, 0%);
-}
-.hero:hover .mainImg-left {
-  transform: translate(0%, 0%);
+.image-container img {
+	height: 400px;
+	cursor: pointer;
 }
 
 .team img {
-  height: 500px;
-  transition: transform 0.3s ease-out;
-  cursor: pointer;
+	height: 400px;
+	cursor: pointer;
 }
-.mainImg-right {
-  transform: translate(0%, 10%);
-}
-.mainImg-left {
-  transform: translate(0%, -10%);
-}
-.team:hover .mainImg-right {
-  transform: translate(0%, 0%);
-}
-.team:hover .mainImg-left {
-  transform: translate(0%, 0%);
-}
+
 /*The text on the side*/
 .details {
-  grid-column: 2/3;
-  align-self: end;
+	grid-column: 2/3;
+	align-self: end;
 }
-.details h1 {
-  font-size: 64px;
-  font-weight: 300;
+h1 {
+	color: #ffffff;
+	font-size: 64px;
+	font-weight: 800;
 }
 .details h2 {
-  font-size: 42px;
-  font-weight: 100;
-  padding: 20px 0px;
+	color: #2d3436;
+	font-size: 42px;
+	font-weight: 500;
 }
 .details p {
-  font-size: 24px;
-  font-weight: 100;
-  padding: 20px 0px 50px 0px;
-  margin-bottom: 45px;
+	color: #2d3436;
+	font-size: 24px;
+	font-weight: 300;
+	margin-bottom: 50px;
 }
-.details a {
-  color: #ffffff;
+a {
+	color: #ffffff;
+	text-decoration: none;
 }
 /* the button */
 #download a:link,
 a:visited {
-  background-color: #000;
-  color: #ffffff;
-  padding: 14px 25px;
+	background-color: #000;
+	color: #ffffff;
+	padding: 14px 25px;
 }
 .button {
-  padding-top: 400px;
-  overflow: hidden;
-  align-self: center;
-  justify-self: center;
-  display: flex;
+	padding-top: 400px;
+	align-self: center;
+	justify-self: center;
 }
-h1 a {
-  text-decoration: none;
-}
+
 #download a:hover,
 a:active {
-  color: #000;
-  background-color: #ffffff;
+	color: #000;
+	background-color: #ffffff;
 }
 #download a {
-  font-size: 16px;
-  font-weight: 300;
-  text-decoration: none;
-}
-
-.row > .column {
-  padding: 20px 25px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.column {
-  float: left;
-  width: 25%;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #f70060;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
-}
-
-/* The Close Button */
-.close {
-  color: #f70060;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.mySlides {
-  display: none;
-}
-
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: #f70060;
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f70060;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-img  {
-  margin-bottom: -1px;
-}
-
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: #f70060;
-}
-
-.caption-container p {
-  font-weight: 300;
-}
-
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-img.hover-shadow {
-  transition: 0.3s;
-}
-
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-/* for laptops or small monitors */ 
-@media screen and (max-width: 1400px) {
-  .team img {
-    height: 400px;
-    margin-left: 150px;
-  }
-  .hero img {
-    height: 400px;
-  }
-  .details h1 {
-    font-size: 38px;
-  }
-  .details h2 {
-    font-size: 28px;
-  }
-  .details p {
-    font-size: 18px;
-  }
-}
-/* Responsive for tablets */
-@media screen and (max-width: 1024px) {
-  .page {
-    grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 2fr 1fr;
-    align-items: center;
-  }
-  .hero {
-    grid-column: 2/3;
-    height: auto;
-  }
-  .hero img {
-    height: 400px;
-  }
-  .details {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    text-align: center;
-  }
-  .details h1 {
-    font-size: 48px;
-  }
-  .details h2 {
-    font-size: 38px;
-  }
-  .nav-links {
-    width: 65%;
-  }
-  .button {
-    margin-left: 110px;
-  }
-  .column {
-    width: 1020px;
-  }
-  .button {
-    float: left;
-  }
-}
-
-/* Responsive for phones */
-@media screen and (max-width: 768px) {
-  .page {
-    grid-template-rows: 1fr 1fr;
-  }
-  .page-cubeit {
-    height: 250vh;
-  }
-  .page-gallery {
-    height: 200vh;
-  }
-  .hero img {
-    height: 390px;
-  }
-  .details h1 {
-    font-size: 38px;
-  }
-  .details h2 {
-    font-size: 28px;
-  }
-  .nav-links {
-    display: none;
-  }
-  .logo a {
-    display: none;
-  }
-  .burger {
-    display: flex;
-  }
-  .button {
-    margin-left: 0px;
-  }
-  .column h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    margin-left: 35px;
-  }
-  .column p {
-    font-size: 18px;
-    margin-bottom: 25px;
-    margin-left: 35px;
-  }
-  .column {
-    display: block;
-    width: 340px;
-    float: left;
-  }
-  .column img {
-    margin-left: 20px;
-  }
-  .button {
-    margin-top: 20px;
-  }
-}
-
-@media screen and (max-width: 667px) {
-  .page-cubeit {
-    height: 50vh;
-  }
-  .small-page {
-    height: 100vh;
-  }
-  .page {
-    height: 230vh;
-  }
-  .page-gallery {
-    height: 250vh;
-  }
-  .hero img a {
-    height: 50%;
-  }
-  .details {
-    margin-top: 150px;
-    margin-bottom: 150px;
-  }
-  .row {
-    display: block;
-    margin-left: 30px;
-  }
-}
-@media (max-width: 568px) {
-  .page-cubeit {
-    height: 390vh;
-  }
-  .column {
-    display: block;
-    width: 290px;
-    float: left;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+	font-size: 16px;
+	font-weight: 300;
+	text-decoration: none;
 }
