--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,112 +1,103 @@
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
+* {
 	box-sizing: border-box;
-}
-
-body {
-	font-family: 'Futura PT', sans-serif;
-	text-transform: uppercase;
-}
-
-/* background && text colour */
-.body {
-	color: #ffffff;
+  }
+  
+  body {
+	font-family: Futura PT;
 	background: #55efc4;
-}
-/* This is the nav bar */
-.topnav {
-	overflow: hidden;
-}
-
-.topnav a {
-	float: none;
-	display: block;
-	color: #ffffff;
+	text-transform: uppercase;
 	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 28px;
-	font-weight: 500;
+  }
+
+  h1{
+	font-size: 54px;
+	color: #fff;
+  }
+  h2{
+	font-size: 48px;
+	color: #fff;
+  }
+  p{
+	font-size: 18px;
+}
+img{
+	height: auto;
+	width: 620px;
+	padding: 50px;
 }
 
-/* thsese are the pages*/
-.page {
-	min-height: 100vh;
+  /* Style the header */
+  .header {
+	grid-area: header;
+	padding: 30px;
+	text-align: center;
+	font-size: 35px;
+  }
+  
+  /* The grid container */
+  .grid-container {
 	display: grid;
-	grid-template-columns: 5% 1fr 1fr 1fr 5%;
-}
-.page-horizon {
-	height: 100vh;
-}
-
-/*Image grid*/
-.image-container {
-	margin-bottom: 100px;
-	grid-column: 4/4;
-	align-self: end;
-}
-.button-container {
-	overflow: hidden;
-	height: 500px;
-	align-self: center;
-	justify-self: center;
-	display: flex;
-}
-.team {
-	overflow: hidden;
-	height: 500px;
-	align-self: center;
-	justify-self: center;
-	display: flex;
-}
-/*The text on the side*/
-.details {
-	grid-column: 2/3;
-	align-self: end;
-}
-h1 {
+	grid-template-areas: 
+	  'header header header header header header' 
+	  'left left middle middle right right' 
+	  'footer footer footer footer footer footer';
+	 grid-column-gap: 15px; 
+  } 
+  
+  /* Style the left column */
+  .left {
+	padding-bottom: 150px;
+	grid-area: left;
+  }
+  
+  /* Style the middle column */
+  .middle {
+	padding-bottom: 150px;
+	grid-area: middle;
+  }
+  
+  /* Style the right column */
+  .right {
+	padding-bottom: 150px;
+	grid-area: right;
+  }
+  
+  /* Style the footer */
+  .footer {
+	grid-area: footer;
 	color: #ffffff;
-	font-size: 64px;
-	font-weight: 800;
-}
-.details h2 {
-	color: #2d3436;
-	font-size: 42px;
-	font-weight: 500;
-}
-.details p {
-	color: #2d3436;
-	font-size: 24px;
-	font-weight: 300;
-	margin-bottom: 50px;
-}
-a {
-	color: #ffffff;
-	text-decoration: none;
-}
-
-/* this works for iphones  */
-@media screen and (max-width: 600px) {
-	.details {
-		width: 100%;
-	}
-	h1 {
-		color: #ffffff;
-		font-size: 48px;
-		font-weight: 800;
-	}
-	.details h2 {
-		color: #2d3436;
-		font-size: 24px;
-		font-weight: 500;
-	}
-	.details p {
-		color: #2d3436;
+	background-color: #2d3436;
+	padding: 10px;
+	text-align: center;
+  }
+  
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+  @media (max-width: 600px) {
+	h1{
+		font-size: 38px;
+	  }
+	  h2{
 		font-size: 18px;
-		font-weight: 300;
-		margin-bottom: 50px;
+	  }  
+	  p{
+		text-align: center;
+		font-size: 14px;
 	}
-}
+	img{
+		height: auto;
+		width: 350px;
+		padding: 10px;
+	}
+	.grid-container  {
+	  grid-template-areas: 
+		'header header header header header header' 
+		'left left left left left left' 
+		'middle middle middle middle middle middle' 
+		'right right right right right right' 
+		'footer footer footer footer footer footer';
+	}
+	.header{
+		font-size: 18px;
+		padding: 15px;
+	}
+  }
