--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ html, body
 	
 	body
 	{
+		font-family: 'Open Sans', sans-serif;
 		margin: 0px;
 		padding: 0px;
 		background: #000000;
@@ -56,6 +57,7 @@ html, body
 		margin: 0em auto;
 		width: 1000px;
 	}
+	
 	
 /*********************************************************************************/
 /* 								Image Style 			                         */
